--- a/environment.yaml
+++ b/environment.yaml
@@ -12,5 +12,6 @@ dependencies:
   - pytorch=2.5
   - pytorch-cuda=12.1
   - requests-cache=1.2
+  - scikit-learn=1.2.1
   - torchvision=0.20
   - torchaudio=2.5
