--- a/environment.yaml
+++ b/environment.yaml
@@ -6,6 +6,9 @@ channels:
 dependencies:
   - python=3.11
   - geopandas=0.14
+  - geopy=2.4.1
+  - holidays=0.47
+  - osmnx
   - pandas<2
   - pip=24.3
   - pymannkendall=1.4
@@ -13,5 +16,9 @@ dependencies:
   - pytorch-cuda=12.1
   - requests-cache=1.2
   - scikit-learn=1.2.1
+  - statsmodels=0.14.4
   - torchvision=0.20
   - torchaudio=2.5
+  - pip:
+      - openmeteo-requests==1.3.0
+      - retry-requests==2.0.0
