Project updates (NOTE: removed the data files temporarily for git lfs setup!)
- All the code is moved to code/preprocessing , same for the data (moved to data/preprocessing) and results (data/results);
- All python code is updated to improve code formatting, to fix some hidden bugs and change some structure for the incoming new data format;
- Added docker code so that it can be reproduced in a docker container;
- Consequently, update the installation and execution instructions.

--- a/install/preprocessing/environment.yaml
+++ b/install/preprocessing/environment.yaml
@@ -8,8 +8,8 @@ dependencies:
   - geopandas=0.14
   - geopy=2.4.1
   - holidays=0.47
-  - osmnx
-  - pandas<2
+  - osmnx=1.9.4
+  - pandas=1.5.3
   - pip=24.3
   - pymannkendall=1.4
   - pytorch=2.5
